<resources>
    <string name="app_name">gym-android-adm</string>
    <string-array name="item_memberships">
        <item>1 mes</item>
        <item>3 mes</item>
        <item>Fecha Personalizada</item>
    </string-array>

    <string name="login_title">Inicio de Sesión</string>
    <string name="login_title_admin">Administrador</string>
    <string name="login_email_hint">Ingrese su correo electrónico</string>
    <string name="login_password_hint">Ingrese su contraseña</string>
    <string name="login_email_error_message">El correo es incorrecto, vuelva a intentarlo.</string>
    <string name="login_password_error_message">La contraseña es incorrecta, vuelva a intentarlo.</string>
    <string name="login_enter">Ingresar</string>

    <string name="product_list_void_message">Lo sentimos\nNo registro ninguno producto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="user_list_void_message">Lo sentimos\nNo registro ningun usuario con ese nombre</string>

</resources>