<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/StartApplicationTheme">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_bg"
        android:scaleType="centerCrop"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.7"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/michroma_regular"
                android:text="@string/login_title"
                android:textColor="@color/white"
                android:textSize="28sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/michroma_regular"
                android:text="@string/login_title_admin"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:orientation="vertical"
            android:layout_weight="0.6"
            android:layout_marginHorizontal="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <EditText
                    android:id="@+id/login_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/black_paragraph"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/login_email_hint"
                    android:textColorHighlight="@color/humo"
                    android:background="@drawable/shape_input_login"
                    android:paddingLeft="10dp"
                    android:inputType="textEmailAddress"
                    android:paddingTop="4dp"
                    android:textColorHint="@color/gray"
                    android:lines="1"
                    android:textSize="16sp"/>
                <TextView
                    android:visibility="invisible"
                    android:id="@+id/error_message_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_email_error_message"
                    android:textColor="@color/red"
                    android:fontFamily="@font/poppins_regular"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/login_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/black_paragraph"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/login_password_hint"
                    android:background="@drawable/shape_input_login"
                    android:paddingTop="4dp"
                    android:textColorHighlight="@color/humo"
                    android:lines="1"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"/>
                <TextView
                    android:visibility="invisible"
                    android:id="@+id/error_message_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_password_error_message"
                    android:textColor="@color/red"
                    android:fontFamily="@font/poppins_regular"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:orientation="vertical"
            android:layout_marginHorizontal="50dp"
            android:layout_weight="0.5">
            <TextView
                android:id="@+id/login_enter"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/login_enter"
                android:layout_gravity="bottom|center"
                android:textColor="@color/black"
                android:fontFamily="@font/michroma_regular"
                android:textSize="22dp"
                android:paddingHorizontal="50dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:background="@drawable/shape_start_page_button"
                />

        </LinearLayout>



    </LinearLayout>


</FrameLayout>